--- a/scripts/a11y-report/styles.css
+++ b/scripts/a11y-report/styles.css
@@ -24,10 +24,17 @@ h3 {
 }
 
 h1,
-h2 {
+h2, 
+h3,
+h4 {
   text-align: center;
 }
 
 ul:first-of-type {
   display: none;
+}
+
+img {
+  display: block;
+  margin: auto;
 }
