--- a/apps/docs/src/styles.css
+++ b/apps/docs/src/styles.css
@@ -1,24 +1,43 @@
+@tailwind base;
 @import "uno.css";
-@import "@unocss/reset/tailwind-compat.css";
 
-body {
-  font-family: "Inter", sans-serif;
+@media (prefers-color-scheme: light) {
+  .dark {
+    background-color: #151c26;
+  }
 }
 
-h1 {
-  /* @apply !text-2xl !font-semibold; */
+main._w-full h1 {
+  font-size: 1.5rem !important;
+  line-height: 2rem !important;
+  font-weight: 600 !important;
 }
 
-h2 {
-  /* @apply !text-xl !border-none; */
+main._w-full h2 {
+  border-style: none !important;
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
 }
 
-h3 {
-  /* @apply !text-lg; */
+main._w-full h3 {
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
 }
 
-h4 {
-  /* @apply !text-lg !font-medium; */
+main._w-full h4 {
+  font-size: 1.125rem !important;
+  line-height: 1.75rem !important;
+  font-weight: 500 !important;
+}
+
+main._w-full p {
+  font-size: 1rem !important;
+  line-height: 1.75rem !important;
+}
+
+main._w-full li {
+  font-size: 0.95rem !important;
+  line-height: 1.3rem !important;
 }
 
 body,
@@ -29,47 +48,46 @@ body,
   background-color: transparent;
 }
 
-/* .nextra-sidebar-container {
-  @apply w-[14rem];
+.nextra-sidebar-container {
+  width: 14rem;
+  margin-top: 0.75rem;
 }
 
 .nextra-nav-container nav,
 .nextra-nav-container + div {
-  @apply max-w-[85rem];
-}
-
-.nextra-nav-container nav {
-  @apply px-8;
+  max-width: 84rem;
 }
 
 .nextra-nav-container + div {
-  @apply mt-5 px-2;
+  margin-top: 1rem;
 }
 
 .nextra-nav-container a:last-of-type svg {
-  @apply w-5;
+  width: 1.25rem;
 }
 
 .nextra-nav-container button div svg {
-  @apply w-4 h-4;
-}
-
-.nextra-search {
-  @apply w-[13rem];
+  width: 1.25rem;
 }
 
 .nextra-toc {
-  @apply w-[14rem];
+  width: 14rem;
+}
+
+.nextra-toc li {
+  font-size: 0.8rem !important;
+  line-height: 1rem !important;
 }
 
 .nextra-toc a {
-  @apply font-normal;
-} 
+  font-weight: 400;
+}
 
 .nextra-scrollbar a._text-primary-800,
 .nextra-scrollbar a._text-primary-600 {
-  @apply font-medium text-slate-800 dark:text-slate-200;
-} */
+  font-weight: 600;
+  color: currentColor;
+}
 
 .nextra-sidebar-footer,
 .nextra-toc-footer,
@@ -77,19 +95,16 @@ body,
   display: none;
 }
 
-/* .nextra-code pre code {
-  @apply text-[0.8rem];
-}
-
-article div:last-child a {
-  @apply text-base;
+.nextra-code pre code {
+  font-size: 0.8rem;
 }
 
 article div:last-child svg {
-  @apply w-[1rem] h-[1rem];
+  width: 1rem;
+  height: 1rem;
 }
 
-@media only screen and (max-width: 768px) {
+/* @media only screen and (max-width: 768px) {
   .nextra-nav-container + div {
     @apply px-0;
   }
@@ -105,4 +120,4 @@ article div:last-child svg {
   article main {
     @apply !px-8;
   }
-} */
+}  */
