--- a/apps/docs/src/pages/globals.css
+++ b/apps/docs/src/pages/globals.css
@@ -41,6 +41,10 @@ body,
   @apply w-2 h-2;
 }
 
+.nextra-content {
+  justify-content: unset;
+}
+
 .nextra-toc {
   @apply w-[7rem];
 }
@@ -57,6 +61,10 @@ body,
 .nextra-sidebar-footer,
 .nextra-toc-footer {
   display: none;
+}
+
+.nextra-breadcrumb {
+  @apply mb-2;
 }
 
 @media only screen and (max-width: 768px) {
