docs: add subcomponents props tables

--- a/apps/docs/src/pages/globals.css
+++ b/apps/docs/src/pages/globals.css
@@ -86,3 +86,9 @@ body,
     @apply w-full;
   }
 }
+
+@media only screen and (max-width: 1024px) {
+  .nextra-toc {
+    display: none !important;
+  }
+}
