docs: style improvements

--- a/apps/docs/src/pages/globals.css
+++ b/apps/docs/src/pages/globals.css
@@ -4,34 +4,20 @@
   background-color: #151c26;
 }
 
-article > main h2 {
-  @apply !border-none;
+article > main p {
+  font-size: 1rem;
+  line-height: 1.75;
 }
 
-article > main h3._mt-8 {
-  @apply mt-6;
-}
-
-article > main h3._mt-8 + p {
-  margin-top: 8px !important;
-}
-
-article > main p,
-article > main p._leading-7 {
-  font-size: 15px;
-  line-height: 24px;
+article > main p:not(:first-child) {
+  @apply !mt-1;
 }
 
 body,
 .nextra-nav-container-blur,
 .nextra-sidebar-footer,
-.nextra-toc-footer,
-.nextra-sidebar-container a {
+.nextra-toc-footer {
   background-color: transparent;
-}
-
-.nextra-sidebar-container {
-  @apply w-[7rem];
 }
 
 .nextra-nav-container nav,
@@ -43,10 +29,6 @@ body,
   @apply px-3;
 }
 
-.nextra-nav-container + div {
-  @apply mt-4;
-}
-
 .nextra-nav-container a:last-of-type svg {
   @apply w-2.5;
 }
@@ -55,21 +37,21 @@ body,
   @apply w-2 h-2;
 }
 
-.nextra-content {
-  justify-content: unset;
+.nextra-sidebar-container li.active a {
+  @apply bg-atmo2 dark:bg-primary_20 text-slate-800 dark:text-slate-200;
 }
 
-.nextra-toc {
+.nextra-sidebar-container {
   @apply w-[7rem];
 }
 
-.nextra-toc a {
-  @apply font-normal;
+.nextra-toc {
+  @apply pt-5;
 }
 
-.nextra-scrollbar a._text-primary-800,
-.nextra-scrollbar a._text-primary-600 {
-  @apply font-medium text-slate-800 dark:text-slate-200;
+.nextra-toc .nextra-scrollbar a._text-primary-800,
+.nextra-toc .nextra-scrollbar a._text-primary-600 {
+  @apply font-semibold text-slate-600 dark:text-slate-200;
 }
 
 .nextra-sidebar-footer,
