--- a/packages/cli/src/plop-templates/app-shell/index.html.hbs
+++ b/packages/cli/src/plop-templates/app-shell/index.html.hbs
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{appName}}</title>
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Open+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
   </head>
