feat(cli): improve baselines
- i18next default languages & suspense
- tsconfig
- bump packages with vulns/issues
- add react-hooks eslint
- emotion css prop opt-in

--- a/packages/cli/src/plop-templates/app-shell/vite.config.ts.hbs
+++ b/packages/cli/src/plop-templates/app-shell/vite.config.ts.hbs
@@ -12,12 +12,7 @@ import { HvAppShellVitePlugin } from "@hitachivantara/app-shell-vite-plugin";
 
 export default defineConfig(({ mode }) => ({
   plugins: [
-    react({
-      jsxImportSource: "@emotion/react",
-      babel: {
-        plugins: ["@emotion/babel-plugin"],
-      },
-    }),
+    react(),
     tsconfigPaths(),
     unoCSS({ mode: "per-module" }),
     cssInjectedByJsPlugin({
