--- a/packages/cli/src/plop-templates/routes.tsx.hbs
+++ b/packages/cli/src/plop-templates/routes.tsx.hbs
@@ -3,7 +3,7 @@ import { Routes, Route } from "react-router-dom";
 
 /* INJECT_IMPORTS */ 
 
-const NotFound = lazy(() => import("pages/NotFound"));
+const NotFound = lazy(() => import("../pages/NotFound"));
 
 const AppRoutes = () => (
   <Routes>
