fix(cli): fix fallback Project component paths

--- a/packages/cli/src/plop-templates/component.tsx.hbs
+++ b/packages/cli/src/plop-templates/component.tsx.hbs
@@ -1,10 +1,10 @@
 import { useTranslation } from "react-i18next";
 import {
+  HvGlobalActions,
   HvGrid,
   HvTypography,
-  HvGlobalActions,
 } from "@hitachivantara/uikit-react-core";
-{{#if useAppShell}}import { withProvider } from "providers/Provider";{{/if}}
+{{#if useAppShell}}import { withProvider } from "../../providers/Provider";{{/if}}
 
 const {{titleCase name}}: React.FC = () => {
   const { t } = useTranslation("{{lowerCase name}}");
