docs: replace Callout with md Alert syntax

--- a/apps/docs/src/app/globals.css
+++ b/apps/docs/src/app/globals.css
@@ -48,6 +48,15 @@ header {
   @apply mb-sm;
 }
 
+.nextra-callout {
+  & b {
+    display: none;
+  }
+  & p {
+    margin-top: 0;
+  }
+}
+
 .nextra-code {
   @apply !my-0;
 }
