--- a/packages/cli/src/plop-templates/app-shell/app-shell.config.ts.hbs
+++ b/packages/cli/src/plop-templates/app-shell/app-shell.config.ts.hbs
@@ -19,7 +19,7 @@ export default (): HvAppShellConfig => ({
   {{/if}}
 
   mainPanel: {
-    maxWidth: "xl"{{#unless viteOptionsAppShell}},
+    maxWidth: "xl"{{#unless appShellAutoMenu}},
     views: [
     {{#each pages}}
         { bundle: "@self/{{pagesPath}}/{{name}}.js", route: "/{{kebabCase name}}" }{{#unless @last}},{{/unless}}
@@ -28,7 +28,7 @@ export default (): HvAppShellConfig => ({
     {{/unless}}
   },
 
-  {{#unless viteOptionsAppShell}}
+  {{#unless appShellAutoMenu}}
   menu: [
   {{#each pages}}
     { label: "key_{{name}}", target: "/{{kebabCase name}}" }{{#unless @last}},{{/unless}}
